# spider

./: .gitignore  Cargo.toml  tasks_as_ecs.md
crates/spider/: Cargo.toml
crates/spider-api/: Cargo.toml
crates/spider-api/src/: lib.rs
crates/spider-core/: Cargo.toml
crates/spider-core/src/: action.rs  beans.rs  err.rs  error.rs  finalized.rs  from_state.rs  lazy.rs  lib.rs  named.rs  project.rs  shared.rs  table.rs
crates/spider-core/src/beans/: bean_query_iter.rs  beans.rs  beans_param.rs  beans_query.rs  from_beans.rs  mod.rs
crates/spider-core/src/beans/beans_param/: bean_extractors.rs
crates/spider-core/src/beans/cons/: functions_cons.rs  mod.rs
crates/spider-core/src/beans/from_beans/: functions_cons.rs
crates/spider-core/src/fs/: layout.rs  mod.rs
crates/spider-core/src/fs/file/: directory.rs  file_collection.rs  file_system_location.rs  mod.rs  provider_extensions.rs  regular_file.rs
crates/spider-core/src/invocation/: compiler.rs  mod.rs  spider.rs
crates/spider-core/src/lazy/: configure.rs  properties.rs  provider.rs  providers.rs  value_source.rs
crates/spider-core/src/lazy/properties/: collections.rs  generic.rs
crates/spider-core/src/lazy/properties/collections/: vec.rs
crates/spider-core/src/lazy/provider/: properties.rs  provider_factory.rs  providers.rs
crates/spider-core/src/lazy/provider/properties/: collections.rs
crates/spider-core/src/lazy/provider/properties/collections/: list.rs
crates/spider-core/src/lazy/providers/: factory.rs  generic.rs
crates/spider-core/src/task/: container.rs  io.rs  mod.rs  provider.rs  task.rs  task_prototypes.rs
crates/spider-core/src/task/io/: input.rs
crates/spider-core/src/task/tasks/: mod.rs
crates/spider-core/tests/: test_inject.rs
crates/spider-fs/: Cargo.toml
crates/spider-fs/src/: lib.rs
crates/spider-fs/src/file/: directory.rs  file_system_location.rs  mod.rs  provider_extensions.rs  regular_file.rs
crates/spider-proc_macros/: Cargo.toml
crates/spider-proc_macros/src/: lib.rs
crates/spider-proc_macros/tests/: test_all_tuples.rs
crates/spider-rs-compiler/: Cargo.toml
examples/mockproject/: settings.spider.rs
