[package]
name = "spider-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
categories.workspace = true

[features]
default = ["fs"]
fs = ["dep:spider-fs"]

[dependencies]
spider-core.workspace = true
spider-fs = { version = "0.0.0", path = "../spider-fs", optional = true }


