[package]
name = "spider-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
categories.workspace = true

[dependencies]
serde = "1.0.219"
static_assertions = "1.1.0"
spider-proc_macros = { version = "0.0.0", path = "../spider-proc_macros"}
thiserror = "2.0.12"
bitfield = "0.19.0"
tracing.workspace = true
md5 = "0.7.0"
smallvec = "1.14.0"
futures = "0.3.31"
pin-project = "1.1.10"
sync_wrapper = { version = "1.0.2", features = ["futures"] }
tokio = { version = "1.44.1", features = ["sync"] }
async-scoped = { version = "0.9.0", features = ["use-tokio"] }

[dev-dependencies]
tokio = { version = "1.44.1", features = ["macros", "test-util"] }
